--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,10 @@ textarea {
   border-radius: 9px!important;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .form-control:focus {
   border-color: #af00b5;
   box-shadow: inset 0 1px 1px rgba(120, 0, 140, 0.075), 0 0 5px rgba(175, 0, 181, 0.4);
